--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="scripts/views/layers/forest.js"></script>
   <script src="scripts/views/layers/loss.js"></script>
   <script src="scripts/models/layersPresenter.js"></script>
+  <script src="scripts/mediator.js"></script>
 
 </body>
 </html>
