--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&sensor=false"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
+  <script src="vendor/moment.min.js"></script>
   <script src="scripts/main.js"></script>
   <script src="scripts/router.js"></script>
   <script src="scripts/views/map.js"></script>
