--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
   <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=drawing,geometry&sensor=false"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
+  <script src="vendor/wax.g.min.js"></script>
   <script src="vendor/moment.min.js"></script>
+  <script src="vendor/cartodb-gmapsv3.js"></script>
   <script src="scripts/main.js"></script>
   <script src="scripts/router.js"></script>
   <script src="scripts/views/map.js"></script>
   <script src="scripts/views/layers/core/canvas.js"></script>
+  <script src="scripts/views/layers/core/cartodb.js"></script>
   <script src="scripts/views/layers/forest.js"></script>
   <script src="scripts/views/layers/loss.js"></script>
+  <script src="scripts/views/layers/imazon.js"></script>
   <script src="scripts/views/timelines/core/timeline.js"></script>
   <script src="scripts/views/timelines/loss.js"></script>
   <script src="scripts/models/layersPresenter.js"></script>
