--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="vendor/wax.g.min.js"></script>
   <script src="vendor/moment.min.js"></script>
   <script src="vendor/cartodb-gmapsv3.js"></script>
+  <script src="vendor/backbone-min.js"></script>
   <script src="scripts/main.js"></script>
   <script src="scripts/router.js"></script>
   <script src="scripts/views/map.js"></script>
