--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="scripts/views/layers/imazon.js"></script>
   <script src="scripts/views/timelines/core/timeline.js"></script>
   <script src="scripts/views/timelines/loss.js"></script>
+  <script src="scripts/views/timelines/imazon.js"></script>
   <script src="scripts/models/presenter.js"></script>
   <script src="scripts/mediator.js"></script>
 
