layers collection, remove/render on mediator

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <script src="vendor/wax.g.min.js"></script>
   <script src="vendor/moment.min.js"></script>
   <script src="vendor/cartodb-gmapsv3.js"></script>
-  <script src="vendor/backbone-min.js"></script>
+  <script src="vendor/backbone.js"></script>
+  <script src="vendor/backbone-cartodb.js"></script>
   <script src="scripts/main.js"></script>
   <script src="scripts/router.js"></script>
   <script src="scripts/views/map.js"></script>
@@ -29,6 +30,7 @@
   <script src="scripts/views/timelines/core/timeline.js"></script>
   <script src="scripts/views/timelines/loss.js"></script>
   <script src="scripts/views/timelines/imazon.js"></script>
+  <script src="scripts/collections/layers.js"></script>
   <script src="scripts/models/presenter.js"></script>
   <script src="scripts/mediator.js"></script>
 
