--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="shortcut icon" href="http://cartodb.com/assets/favicon.ico" />
-    <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.css">
     <link href="/css/main.css" rel="stylesheet">
     
@@ -16,13 +15,7 @@
     <![endif]-->
 </head>
 <body>
-  <div id="holder">
-    <div id="main-spinner"></div>
-    <div id="header"></div>
-    <div id="content">
-    </div>
-    <div id="footer"></div>
-  </div>
+    <div id="map"></div>
     <script data-main="/js/main.js" src="/js/lib/require.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
