wip: add analysis module with tests

--- a/test/index.html
+++ b/test/index.html
@@ -2,21 +2,17 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Jasmine Spec Runner</title>
-
-	<link rel="shortcut icon" type="image/png" href="lib/jasmine_favicon.png">
-	<link rel="stylesheet" type="text/css" href="lib/jasmine.css">
+	<title>GFW Unit Tests</title>
+    <link rel="stylesheet" href="lib/jasmine.css">
+    <script src="lib/jasmine.js"></script>
+    <script src="lib/jasmine-html.js"></script>
+    <script src="lib/boot.js"></script>
+    <script src="/testem.js"></script>
 </head>
 
 <body>
-	<!-- sandbox that tests can use for things that require the DOM -->
+	<h1>GFW Unit Tests</h1>
 	<div id="sandbox"></div>
-
-	<script src="lib/jasmine.js"></script>
-	<!-- Pull in Testem helper when using Testem -->
-	<script src="/testem.js"></script>
-	<script src="lib/jasmine-html.js"></script>
-	<!-- Using RequireJS. Specs and config are done in spec-runner.js -->
 	<script type="text/javascript" src="../js/lib/require.js" data-main="spec-runner"></script>
 </body>
 </html>
